--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ img {
 
 /* logo */
 
-.logo-header {
+.logo {
   color: var(--accent-color);
 
   font-weight: 700;
@@ -87,21 +87,22 @@ img {
   margin-left: 93px;
 }
 
-.site-nav .item + .item {
-  margin-left: 50px;
-}
-
-.site-nav .link {
+.site-nav__link {
   display: block;
   padding: 32px 0;
   color: var(--title-text-color);
 }
 
-.site-nav .item {
+.site-nav__item {
   position: relative;
+  margin-right: 50px;
 }
 
-.link.current::after {
+.site-nav__item:last-child {
+  margin-right: 0;
+}
+
+.site-nav__link--activ::after {
   position: absolute;
   content: '';
 
@@ -115,7 +116,7 @@ img {
   background-color: var(--accent-color);
 }
 
-.link.current {
+.site-nav__link.site-nav__link--activ {
   color: var(--accent-color);
 }
 
@@ -126,7 +127,7 @@ img {
   margin-left: auto;
 }
 
-.icon-contacts {
+.contacts__icon {
   background-repeat: no-repeat;
   margin-right: 10px;
 
@@ -135,11 +136,11 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts .item + .item {
+.contacts__item + .contacts__item {
   margin-left: 50px;
 }
 
-.contacts .link {
+.contacts__link {
   display: flex;
   align-items: center;
   padding: 32px 0;
@@ -151,8 +152,8 @@ img {
 
 /* site nav, contacts */
 
-.site-nav .link,
-.contacts .link {
+.site-nav__link,
+.contacts__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -162,12 +163,12 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus,
-.contacts .link:hover,
-.contacts .link:focus,
-.contacts .link:hover .icon-contacts,
-.contacts .link:focus .icon-contacts {
+.site-nav__link:hover,
+.site-nav__link:focus,
+.contacts__link:hover,
+.contacts__link:focus,
+.contacts__link:hover .contacts__icon,
+.contacts__link:focus .contacts__icon {
   color: var(--accent-color);
   fill: var(--accent-color);
 }
@@ -568,7 +569,7 @@ textarea {
 }
 
 .team-card {
-  flex-basis: calc((100% - 90px) / 4);
+  flex-basis: calc(100% / 4 - 30px);
   margin-right: 30px;
 
   background-color: var(--main-bg-color);
@@ -577,7 +578,7 @@ textarea {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-card:nth-child(4n) {
+.team-card:last-child {
   margin-right: 0;
 }
 
@@ -809,20 +810,18 @@ textarea {
 
 /* portfolio-list */
 
-.portfolio-list {
+.card-set {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  margin: -15px;
 }
 
-.elements {
-  flex-basis: calc(100% / 3 -30px);
-  margin-left: 30px;
-  margin-top: 30px;
+.card-set__item {
+  flex-basis: calc(100% / 3 - 30px);
+  margin: 15px;
 }
 
-.portfolio-link {
+.card-set__link {
   color: inherit;
   display: block;
   cursor: pointer;
@@ -831,26 +830,25 @@ textarea {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
+.card-set__link:hover,
+.card-set__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-link:hover .portfolio-overlay,
-.portfolio-link:focus .portfolio-overlay {
+.card-set__link:hover .card-set__overlay,
+.card-set__link:focus .card-set__overlay {
   transform: translateY(-100%);
 }
 
-.overflow {
+.card-set__content {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-overlay {
+.card-set__overlay {
   position: absolute;
   padding: 63px 24px;
-  width: 370px;
 
   background-color: rgba(33, 150, 243, 0.9);
 
@@ -858,7 +856,7 @@ textarea {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-text {
+.card-set__text {
   color: var(--main-bg-color);
 
   font-weight: 400;
@@ -866,7 +864,7 @@ textarea {
   line-height: 1.56;
 }
 
-.container-title {
+.card-set__meta {
   padding-top: 20px;
   padding-right: 24px;
   padding-bottom: 24px;
@@ -877,13 +875,13 @@ textarea {
   background-color: #ffffff;
 }
 
-.container-title > .title {
+.card-set__title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
 
-.container-title > .list {
+.card-set__name {
   margin-top: 4px;
 
   color: var(--primary-text-color);
