--- a/css/styles.css
+++ b/css/styles.css
@@ -800,11 +800,11 @@ img {
   margin-bottom: 50px;
 }
 
-.filters .item + .item {
-  margin-left: 8px;
+.filters__item:not(:last-child) {
+  margin-right: 8px;
 }
 
-.button-filter {
+.filters__butoon {
   border-radius: 4px;
   padding: 6px 22px;
   border: 1px solid transparent;
@@ -822,8 +822,8 @@ img {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-filter:hover,
-.button-filter:focus {
+.filters__butoon:hover,
+.filters__butoon:focus {
   color: var(--main-bg-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
