--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,7 @@
 @import "./base/normalize";
 @import "./components/page-header";
 @import "./components/logo";
+
+body {
+    background-color: #fff;
+}
