--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,9 @@
 @import "./utils/variables";
 @import "./utils/placeholders";
+@import "./utils/mixins";
 @import "./base/normalize";
+@import "./components/_body";
 @import "./components/page-header";
+@import "./components/_container";
 @import "./components/logo";
-
-body {
-    background-color: #fff;
-}
+@import "./components/_site-nav";
