--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,16 +1,12 @@
-%body {
-  color: $title-text-color;
-  background-color: $main-bg-color;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  letter-spacing: 0.03em;
-}
-
-%ul {
+%list-style {
   list-style: none;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+%text-decoration {
+  text-decoration: none;
 }
 
 %img {
@@ -19,13 +15,17 @@
   height: auto;
 }
 
-%h1,
-%h2,
-%h3,
-%h4,
-%h5,
-%h6,
-%p {
+%indentations {
   margin: 0;
   padding: 0;
+}
+
+%fonts__site-nav-contacts {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
