--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,11 +2,7 @@
   border-bottom: 1px solid #ececec;
 }
 
-.header {
-  @include centeredflex();
-}
-
+.page-header__content,
 .page-header__nav {
-  align-items: center;
-  display: flex;
+  @include centeredflex();
 }
