--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -8,14 +8,10 @@
 
 .social__title {
   @extend %indentations;
+  @extend %fonts-title;
 
   color: $main-bg-color;
   margin-bottom: 20px;
-
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
 }
 
 .social__icon {
