--- a/sass/components/_button-close.scss
+++ b/sass/components/_button-close.scss
@@ -15,10 +15,10 @@
 }
 
 .button-close__icon {
+  @include transition();
+
   height: 18px;
   fill: currentColor;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .button-close:hover &,
   .button-close:focus & {
