--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,6 @@
 .button {
+  @include transition($type: background-color);
+
   border-radius: 4px;
   padding: 10px 32px;
   border: 1px solid transparent;
@@ -12,8 +14,6 @@
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
