--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,28 +2,24 @@
   @extend %list-style;
 
   display: inline-flex;
-  box-sizing: border-box;
 }
 
 .clients__item {
   display: flex;
-  margin-right: 30px;
 
-  &:last-child {
-    margin-right: 0;
+  &:not(:last-child) {
+    margin-right: 30px;
   }
 }
 
 .clients__link {
-  @extend %text-decoration;
+  @include centeredflex();
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   width: 170px;
   height: 92px;
+  text-decoration: none;
 
   color: #afb1b8;
 
@@ -34,10 +30,10 @@
 }
 
 .clients__icon {
+  @include transition();
+
   fill: currentColor;
   border: none;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .clients__link:hover &,
   .clients__link:focus & {
