--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -6,12 +6,12 @@
 }
 
 .contacts__icon {
+  @include transition($type: fill);
+
   background-repeat: no-repeat;
   margin-right: 10px;
 
   fill: currentColor;
-
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts__item:not(:last-child) {
@@ -20,12 +20,10 @@
 
 .contacts__link {
   @extend %fonts__site-nav-contacts;
-  @extend %text-decoration;
+  @include centeredflex();
+  @include transition();
 
-  display: flex;
-  align-items: center;
   padding: 32px 0;
-  cursor: pointer;
   border: none;
 
   color: $primary-text-color;
