--- a/sass/components/_list-icons.scss
+++ b/sass/components/_list-icons.scss
@@ -7,24 +7,19 @@
   margin-left: 32px;
 }
 
-.list-icons__item {
+.list-icons__item:not(:last-child) {
   margin-right: 10px;
-
-  &:last-child {
-    margin-right: 0;
-  }
 }
 
 .list-icons__link {
-  @extend %text-decoration;
+  @include transition($type: background-color);
 
   display: flex;
   padding: 12px;
   border-radius: 50%;
+  text-decoration: none;
 
   color: #afb1b8;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
@@ -33,9 +28,9 @@
 }
 
 .list-icons__icon {
-  fill: currentColor;
+  @include transition();
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: currentColor;
 
   .list-icons__link:hover &,
   .list-icons__link:focus & {
