--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,5 @@
 .modal {
+  @include transition($type: transform);
   position: absolute;
 
   top: 50%;
@@ -13,7 +14,6 @@
   border-radius: 4px;
 
   transform: scale(1) translate(-50%, -50%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .backdrop--is-hidden & {
     transform: scale(0.9) translate(-50%, -50%);
