--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -2,15 +2,11 @@
   margin-left: auto;
 }
 
-.subscription__text {
+.subscription__title {
   @extend %indentations;
+  @extend %fonts-title;
 
   margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-
   color: $main-bg-color;
 }
 
@@ -23,6 +19,8 @@
 }
 
 .subscription__input[type="email"] {
+  @include transition($type: border);
+
   width: 358px;
   height: 50px;
   padding-left: 16px;
@@ -33,8 +31,6 @@
   background-color: $background-black-color;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscription__input:hover,
@@ -43,8 +39,7 @@
 }
 
 .subscription__button {
-  display: inline-flex;
-  align-items: center;
+  @include centeredflex(inline-flex);
   min-width: 200px;
   height: 50px;
   padding: 10px 28px;
