--- a/sass/components/_team-member.scss
+++ b/sass/components/_team-member.scss
@@ -8,15 +8,14 @@
 
 .team-member__item {
   flex-basis: calc(100% / 4 - 30px);
-  margin-right: 30px;
 
   background-color: $main-bg-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  &:last-child {
-    margin-right: 0;
+  &:not(:last-child) {
+    margin-right: 30px;
   }
 }
 
