--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -5,9 +5,17 @@
 @import "./base/normalize";
 @import "./components/_body";
 @import "./components/page-header";
+@import "./components/section";
 @import "./components/_container";
 @import "./components/logo";
-
-body {
-  background-color: aqua;
-}
+@import "./components/_site-nav";
+@import "./components/_contacts";
+@import "./components/filters";
+@import "./components/button";
+@import "./components/card-set";
+@import "./components/product";
+@import "./components/list-icons";
+@import "./components/page-footer";
+@import "./components/address";
+@import "./components/social";
+@import "./components/subscription";
