--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -5,10 +5,6 @@
   margin-bottom: 0;
 }
 
-%text-decoration {
-  text-decoration: none;
-}
-
 %img {
   display: block;
   max-width: 100%;
@@ -28,4 +24,17 @@
   text-decoration: none;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+%fonts-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+%fonts-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
