--- a/css/main.css
+++ b/css/main.css
@@ -752,11 +752,11 @@ body {
   padding: 94px 0;
 }
 
-.section--work {
+.section__work {
   padding-top: 0;
 }
 
-.section--team {
+.section__team {
   background-color: #f5f4fa;
 }
 
